docs/post/traefik/auth.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: auth
  name: auth
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: auth
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: auth
    spec:
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: auth
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  selector:
    run: auth
  ports:
  - port: 8888
    name: auth-port
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth
  annotations:
    kubernetes.io/ingress.class: traefik
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /auth
        backend:
          serviceName: auth
          servicePort: 8888
